--- a/package.json
+++ b/package.json
@@ -4,18 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "nodemon --watch \"src/*\" --ext \"ts, json\" --exec \"ts-node src/server.ts\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^28.1.0",
-    "ts-jest": "^28.0.2",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1"    
   },
   "devDependencies": {
-    "@types/jest": "^27.5.1"
+    "@types/jest": "^27.5.1",
+    "@types/express": "^4.17.13",    
+    "@types/node": "^17.0.21",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.7.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.6.2",
+    "jest": "^28.1.0",
+    "ts-jest": "^28.0.2"
   }
 }
