--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.15.1",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"    
+    "express": "^4.18.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
-    "@types/express": "^4.17.13",    
     "@types/node": "^17.0.21",
+    "jest": "^28.1.0",
     "nodemon": "^2.0.15",
+    "prisma": "^3.15.1",
+    "ts-jest": "^28.0.2",
     "ts-node": "^10.7.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.6.2",
-    "jest": "^28.1.0",
-    "ts-jest": "^28.0.2"
+    "typescript": "^4.6.2"
   }
 }
